# unleashspace-iot-demo

./: .gitignore  bun.lockb  captain-definition-backend  package.json  tailwind.config.cjs  vite.config.ts
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
src/lib/: upload.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/speedtest/down/: +server.ts
src/routes/upload-results/: +server.ts
